2011-08-30  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc,
	  modules/pandora_module_regexp.h,
	  modules/pandora_module_factory.cc: Merged from trunk. Check file size
	  to detect if the file was truncated. Added a new configuration token
	  to avoid seeking to the eof.

2011-03-08  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_regexp.cc: Merged from trunk. Added support
	  for extended regular expressions.

2010-12-10  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Updated. Some paths may have been wrong.

2010-12-01  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Fixed md5 calculation.

2010-12-01  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated ro r3644.

	* installer/pandora.mpi, pandora.cc: Updated version strings.

2010-11-29  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_update.exe: Give the agent service some time to stop.

2010-11-18  Ramon Novoa  <rnovoa@artica.es>

	* bin/PandoraAgent.exe: Updated to r3583.

2010-11-17  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Fixed a typo in copyScpDataFile that made
	  it always return PANDORA_EXCEPTION.

2010-11-15  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Search for event log descriptions
	  in multiple DLLs if necessary. Improved event log error detection.

2010-11-14  Sancho Lerena <slerena@artica.es>
	
	* bin/util/pandora_update.exe: This small binary (see the Unix
	perl version to see the sources), allow to replace the running
	windows binary, by stopping the service and restarting it. Will
	allow automatic upgrades of the agent using the fille collection
	mechanism.

2010-11-12  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: isServiceRunning returns -1 for module
	  states other than "Running" and "Stopped".

	* modules/pandora_module_logevent.cc,
	  modules/pandora_module_logevent.h: Return a non empty string if